Cumulative Layout Shift (CLS) fix

--- a/src/App.css
+++ b/src/App.css
@@ -924,7 +924,6 @@ section.getInTouch {
   margin: 20px 0 0;
 }
 footer {
-  transition: background 0.3s, border 0.3s, border-radius 0.3s, box-shadow 0.3s;
   padding: 90px 0px 60px 0px;
   background-color: #282F3B;
 }
